<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="account_preference_file_key">account_preferences</string>
    <string name="user_key">user_key</string>

    <string name="login_label">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="regist_label">Regist Account</string>
    <string name="logout_label">Logout</string>
    <string name="shoe_list_label">Shoe List</string>
    <string name="shoe_detail_label">Shoe Detail</string>
    <string name="welcome_label">Welcome</string>
    <string name="instructions_label">Instructions</string>

    <string name="welcome_user_label">Welcome %s</string>
    <string name="instructions_email_label">You are logged in with email: %s</string>
    <string name="instructions_action_label">Please tap button to go to Shoe List</string>

    <string name="shoe_list_item_size">Size: %s</string>
    <string name="shoe_list_item_company">Company: %s</string>

    <string name="login_error">Account is incorrect!</string>
    <string name="login_invalid">Please input Email or Password!</string>

    <string name="name_label">Name</string>
    <string name="size_label">Size</string>
    <string name="company_label">Company</string>
    <string name="description_label">Description</string>
    <string name="save_label">Save</string>
</resources>
