<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeDetail"
            type="com.udacity.shoestore.models.ShoeDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/name_label"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/size_label"
            app:layout_constraintEnd_toStartOf="@id/name_edit_text"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@{shoeDetail.shoe.name}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/name_label"
            app:layout_constraintTop_toTopOf="@id/name_label" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/size_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/size_edit_text"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/size_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:inputType="numberDecimal"
            android:text="@{Double.toString(shoeDetail.shoe.size)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/size_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/size_label"
            app:layout_constraintTop_toTopOf="@id/size_label" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/company_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/company_edit_text"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_label"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@{shoeDetail.shoe.company}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/company_label"
            app:layout_constraintTop_toTopOf="@id/company_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/description_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/description_edit_text"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_label"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@{shoeDetail.shoe.description}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/description_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/description_label"
            app:layout_constraintTop_toTopOf="@id/description_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>